[gd_scene load_steps=4 format=3 uid="uid://bax8m3bisdg3j"]

[ext_resource type="FontFile" uid="uid://bta4i8wglohb1" path="res://assets/fonts/digital_disco/DigitalDisco.ttf" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://ccfbt7e14suxv" path="res://scripts/game.gd" id="1_yqjtg"]
[ext_resource type="Texture2D" uid="uid://br8ke0h5ol38a" path="res://assets/background.png" id="2_lnu2h"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqjtg")

[node name="FarmerTimer" type="Timer" parent="."]
autostart = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_lnu2h")

[node name="LabelContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -575.0
offset_top = 84.0
offset_right = 575.0
offset_bottom = 205.0
grow_horizontal = 2
theme_override_constants/separation = 50

[node name="BeansLabel" type="Label" parent="LabelContainer"]
custom_minimum_size = Vector2(250, 121.12)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_uwrxv")
theme_override_font_sizes/font_size = 40
text = "BEANS: X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClickLabel" type="Label" parent="LabelContainer"]
custom_minimum_size = Vector2(250, 121.12)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_uwrxv")
theme_override_font_sizes/font_size = 40
text = "CLICK: X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FarmerLabel" type="Label" parent="LabelContainer"]
custom_minimum_size = Vector2(250, 121.12)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_uwrxv")
theme_override_font_sizes/font_size = 40
text = "FARMERS: X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedLabel" type="Label" parent="LabelContainer"]
custom_minimum_size = Vector2(250, 121.12)
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("1_uwrxv")
theme_override_font_sizes/font_size = 40
text = "SPEED: X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -115.5
offset_right = 122.0
offset_bottom = 115.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="GatherButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_uwrxv")
theme_override_font_sizes/font_size = 30
text = "GATHER"

[node name="UpgradeButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_uwrxv")
theme_override_font_sizes/font_size = 30
text = "UPGRADE - X"

[node name="FarmerButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_uwrxv")
theme_override_font_sizes/font_size = 30
text = "FARMER - X"

[node name="SpeedButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_uwrxv")
theme_override_font_sizes/font_size = 30
text = "SPEED - X"
